fix `miejsce-box` overflow

--- a/favplaces/app/static/css/atrakcje.css
+++ b/favplaces/app/static/css/atrakcje.css
@@ -60,6 +60,8 @@
     border-radius: 20px;
     margin: 20px;
     padding: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .miejsce-box img {
